# Shopping-Basket

./: .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
basket/: basket.py  catalog.py  config_loader.py  item.py  logging_setup.py  offer.py  utils.py
config/: settings.py
config/catalogs/: branchX.json  default.json
config/offers/: branchX.json  default.json
tests/: test_basket.py
